--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -38,6 +38,10 @@
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LbY-lG-T1I">
                                 <rect key="frame" x="0.0" y="100" width="414" height="406"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="4cH-ic-H0G" appends="YES" id="S2q-01-lRD"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -65,60 +69,48 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="4cH-ic-H0G">
+                    <connections>
+                        <action selector="tapView:" destination="BYZ-38-t0r" id="y4x-2V-e4J"/>
+                        <segue destination="REH-Ky-rDS" kind="show" id="CPa-Rc-7dK"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="113.31521739130436"/>
-        </scene>
-        <!--Zoom Up View Controller-->
-        <scene sceneID="FzJ-CD-YvN">
-            <objects>
-                <viewController id="ckB-8T-cFs" customClass="ZoomUpViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mCS-Sb-1lf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RVr-6y-KS4">
-                                <rect key="frame" x="169" y="393" width="77" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="一覧に戻る"/>
-                                <connections>
-                                    <segue destination="IVe-8h-LqF" kind="unwind" unwindAction="unwind:" id="1Ge-vs-heV"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="fb5-P1-eNu"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zPl-YM-Ftg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="IVe-8h-LqF" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="872.46376811594212" y="103.53260869565219"/>
         </scene>
         <!--Zoom Up View Controller-->
         <scene sceneID="v57-ya-l3z">
             <objects>
                 <viewController id="REH-Ky-rDS" customClass="ZoomUpViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zVn-BY-bUt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oTQ-pX-0TY">
-                                <rect key="frame" x="169" y="393" width="77" height="30"/>
+                                <rect key="frame" x="169" y="449" width="77" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="一覧に戻る"/>
                                 <connections>
-                                    <segue destination="ql2-ij-Bsg" kind="unwind" unwindAction="unwind:" id="XuH-8K-Wsg"/>
+                                    <segue destination="ql2-ij-Bsg" kind="unwind" unwindAction="unwind:" id="z6x-ZO-tzy"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V1U-gx-asc">
+                                <rect key="frame" x="87" y="163" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="nMe-oQ-iAh"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Kgg-94-p6l"/>
+                    <connections>
+                        <outlet property="zoomUpImageView" destination="V1U-gx-asc" id="xQ8-W1-kRt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5w1-v5-cne" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="ql2-ij-Bsg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="882.46376811594212" y="113.53260869565219"/>
+            <point key="canvasLocation" x="853.62318840579712" y="112.50000000000001"/>
         </scene>
     </scenes>
 </document>
